<resources>
    <string name="app_name">Biblioteca</string>
    <string name="login_username">Usuário</string>
    <string name="login_password">Senha</string>
    <string name="login_register">Não tem cadastro?</string>
    <string name="login_photo">Foto do usuário</string>
    <string name="register_name">Nome</string>
    <string name="register_email">E-mail</string>
    <string name="register_phone">Telefone</string>
    <string name="register_password">Senha</string>
    <string name="register_confirm_password">Confirmar Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_ok">OK</string>
    <string name="btn_salvar">Salvar</string>
    <string name="msg_user_registered">%1$s, seu usuário foi salvo com sucesso!</string>
    <string name="msg_required_field">Esse campo é obrigatório</string>
    <string name="msg_password_different">As senhas devem ser iguais!</string>
    <string name="msg_invalid_credential">Credenciais Inválidas</string>
    <string name="msg_welcome">Seja bem vindo, %1$s!</string>
</resources>
